php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #47779 Wrong value for SIG_UNBLOCK and SIG_SETMASK constants
Submitted: 2009-03-25 22:32 UTC Modified: 2009-03-25 22:53 UTC
From: mbeccati@php.net Assigned:
Status: Closed Package: PCNTL related
PHP Version: 5.3CVS-2009-03-25 (CVS) OS: *
Private report: No CVE-ID: None
 [2009-03-25 22:32 UTC] mbeccati@php.net
Description:
------------
While chking pcntl.c because of build errors on FreeBSD 6 and test failures on NetBSD 4, I spotted that SIG_UNBLOCK and SIG_SETMASK both have the same value as SIG_BLOCK.

Patch w/ test available here:

http://www.beccati.com/misc/php/pcntl_sig_constants_HEAD.diff

My karma prevents me from committing directly.

Reproduce code:
---------------
var_dump(SIG_BLOCK);
var_dump(SIG_UNBLOCK);
var_dump(SIG_SETMASK);

Expected result:
----------------
int(0)
int(1)
int(2)

Actual result:
--------------
int(0)
int(0)
int(0)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-03-25 22:53 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Fixed in 5.3 and HEAD. Thanks.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 06:00:02 2026 UTC