- Fixed bug #47779 (Wrong value for SIG_UNBLOCK and SIG_SETMASK constants).   Patch by: mbeccati at php.net